All image for parallax + every device

--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -870,6 +870,213 @@ h6:first-child,
     background: url("images/parallax/400x200/backgroundImage11.jpg") center fixed no-repeat;
   }
 }
+.parallax__img--thirteen {
+  background: url("images/parallax/2560x1707/backgroundImage12.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--thirteen {
+    background: url("images/parallax/1920x1080/backgroundImage12.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--thirteen {
+    background: url("images/parallax/1280x800/backgroundImage12.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--thirteen {
+    background: url("images/parallax/800x500/backgroundImage12.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--thirteen {
+    background: url("images/parallax/400x200/backgroundImage12.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--fourteen {
+  background: url("images/parallax/2560x1707/backgroundImage13.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--fourteen {
+    background: url("images/parallax/1920x1080/backgroundImage13.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--fourteen {
+    background: url("images/parallax/1280x800/backgroundImage13.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--fourteen {
+    background: url("images/parallax/800x500/backgroundImage13.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--fourteen {
+    background: url("images/parallax/400x200/backgroundImage13.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--fiveteen {
+  background: url("images/parallax/2560x1707/backgroundImage14.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--fiveteen {
+    background: url("images/parallax/1920x1080/backgroundImage14.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--fiveteen {
+    background: url("images/parallax/1280x800/backgroundImage14.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--fiveteen {
+    background: url("images/parallax/800x500/backgroundImage14.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--fiveteen {
+    background: url("images/parallax/400x200/backgroundImage14.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--sixteen {
+  background: url("images/parallax/2560x1707/backgroundImage15.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--sixteen {
+    background: url("images/parallax/1920x1080/backgroundImage15.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--sixteen {
+    background: url("images/parallax/1280x800/backgroundImage15.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--sixteen {
+    background: url("images/parallax/800x500/backgroundImage15.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--sixteen {
+    background: url("images/parallax/400x200/backgroundImage15.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--seventeen {
+  background: url("images/parallax/2560x1707/backgroundImage16.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--seventeen {
+    background: url("images/parallax/1920x1080/backgroundImage16.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--seventeen {
+    background: url("images/parallax/1280x800/backgroundImage16.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--seventeen {
+    background: url("images/parallax/800x500/backgroundImage16.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--seventeen {
+    background: url("images/parallax/400x200/backgroundImage16.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--heighteen {
+  background: url("images/parallax/2560x1707/backgroundImage17.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--heighteen {
+    background: url("images/parallax/1920x1080/backgroundImage17.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--heighteen {
+    background: url("images/parallax/1280x800/backgroundImage17.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--heighteen {
+    background: url("images/parallax/800x500/backgroundImage17.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--heighteen {
+    background: url("images/parallax/400x200/backgroundImage17.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--nineteen {
+  background: url("images/parallax/2560x1707/backgroundImage18.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--nineteen {
+    background: url("images/parallax/1920x1080/backgroundImage18.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--nineteen {
+    background: url("images/parallax/1280x800/backgroundImage18.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--nineteen {
+    background: url("images/parallax/800x500/backgroundImage18.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--nineteen {
+    background: url("images/parallax/400x200/backgroundImage18.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--twenty {
+  background: url("images/parallax/2560x1707/backgroundImage19.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--twenty {
+    background: url("images/parallax/1920x1080/backgroundImage19.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--twenty {
+    background: url("images/parallax/1280x800/backgroundImage19.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--twenty {
+    background: url("images/parallax/800x500/backgroundImage19.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--twenty {
+    background: url("images/parallax/400x200/backgroundImage19.jpg") center fixed no-repeat;
+  }
+}
+.parallax__img--twenty-one {
+  background: url("images/parallax/2560x1707/backgroundImage20.jpg") center fixed no-repeat;
+}
+@media screen and (max-width: 1920px) {
+  .parallax__img--twenty-one {
+    background: url("images/parallax/1920x1080/backgroundImage20.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .parallax__img--twenty-one {
+    background: url("images/parallax/1280x800/backgroundImage20.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 800px) {
+  .parallax__img--twenty-one {
+    background: url("images/parallax/800x500/backgroundImage20.jpg") center fixed no-repeat;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parallax__img--twenty-one {
+    background: url("images/parallax/400x200/backgroundImage20.jpg") center fixed no-repeat;
+  }
+}
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
 *
