--- a/_mockUp/src/jade/blog.jade
+++ b/_mockUp/src/jade/blog.jade
@@ -10,7 +10,15 @@ block header
     include includes/header.jade
 
 block content
-    p Page Blog
+    div.parallax__img.parallax__img--thirteen
+    div.parallax__body
+        p Actualités
+    
+    div.parallax__img.parallax__img--fourteen
+    div.parallax__body
+        p Galerie
+        
+    div.parallax__img.parallax__img--fiveteen
 
 block footer
     include includes/footer.jade
