--- a/_mockUp/src/jade/contact.jade
+++ b/_mockUp/src/jade/contact.jade
@@ -10,7 +10,15 @@ block header
     include includes/header.jade
 
 block content
-    p Page Contact
+    div.parallax__img.parallax__img--nineteen
+    div.parallax__body
+        p Formulaire contact
+        
+    div.parallax__img.parallax__img--twenty
+    div.parallax__body
+        p Formulaire Restaurant
+    
+    div.parallax__img.parallax__img--twenty-one
 
 block footer
     include includes/footer.jade
