--- a/_mockUp/src/jade/evenement.jade
+++ b/_mockUp/src/jade/evenement.jade
@@ -29,4 +29,4 @@ block footer
 
     script.
         var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
-        var addressRsts = ["Rue Peetermans 40, 4100 Seraing, Belgique", "Rue Puit Marie 10, 4100 Seraing, Belgique","Rue du Marais 30, 4100 Seraing, Belgique"]
+        var addressRsts = []
