--- a/_mockUp/src/jade/restaurants.jade
+++ b/_mockUp/src/jade/restaurants.jade
@@ -10,7 +10,11 @@ block header
     include includes/header.jade
 
 block content
-    p Page Restaurant
+    div.parallax__img.parallax__img--sixteen
+    div.parallax__body
+        p Galerie
+        
+    div.parallax__img.parallax__img--seventeen
 
 block footer
     include includes/footer.jade
