--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -67,6 +67,7 @@
         background: url("images/parallax/800x500/backgroundImage4.jpg") center fixed no-repeat
     +media-query( screen, max-width 400px )
         background: url("images/parallax/400x200/backgroundImage4.jpg") center fixed no-repeat
+
 // - evenements.jade
 .parallax__img--six
     background: url("images/parallax/2560x1707/backgroundImage5.jpg") center fixed no-repeat
@@ -108,6 +109,7 @@
             background: url("images/parallax/800x500/backgroundImage8.jpg") center fixed no-repeat
         +media-query( screen, max-width 400px )
             background: url("images/parallax/400x200/backgroundImage8.jpg") center fixed no-repeat
+
 // - evenement.jade
 .parallax__img--ten
     background: url("images/parallax/2560x1707/backgroundImage9.jpg") center fixed no-repeat
@@ -139,3 +141,101 @@
             background: url("images/parallax/800x500/backgroundImage11.jpg") center fixed no-repeat
         +media-query( screen, max-width 400px )
             background: url("images/parallax/400x200/backgroundImage11.jpg") center fixed no-repeat
+
+// - Actualité
+.parallax__img--thirteen
+    background: url("images/parallax/2560x1707/backgroundImage12.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage12.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage12.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage12.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage12.jpg") center fixed no-repeat
+.parallax__img--fourteen
+    background: url("images/parallax/2560x1707/backgroundImage13.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage13.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage13.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage13.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage13.jpg") center fixed no-repeat
+.parallax__img--fiveteen
+    background: url("images/parallax/2560x1707/backgroundImage14.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage14.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage14.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage14.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage14.jpg") center fixed no-repeat
+
+// - Restaurants
+.parallax__img--sixteen
+    background: url("images/parallax/2560x1707/backgroundImage15.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage15.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage15.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage15.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage15.jpg") center fixed no-repeat
+.parallax__img--seventeen
+    background: url("images/parallax/2560x1707/backgroundImage16.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage16.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage16.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage16.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage16.jpg") center fixed no-repeat
+
+// - Restaurant
+.parallax__img--heighteen
+    background: url("images/parallax/2560x1707/backgroundImage17.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage17.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage17.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage17.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage17.jpg") center fixed no-repeat
+
+// - Contact
+.parallax__img--nineteen
+    background: url("images/parallax/2560x1707/backgroundImage18.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage18.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage18.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage18.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage18.jpg") center fixed no-repeat
+.parallax__img--twenty
+    background: url("images/parallax/2560x1707/backgroundImage19.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage19.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage19.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage19.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage19.jpg") center fixed no-repeat
+.parallax__img--twenty-one
+    background: url("images/parallax/2560x1707/backgroundImage20.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage20.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1280px )
+            background: url("images/parallax/1280x800/backgroundImage20.jpg") center fixed no-repeat
+        +media-query( screen, max-width 800px )
+            background: url("images/parallax/800x500/backgroundImage20.jpg") center fixed no-repeat
+        +media-query( screen, max-width 400px )
+            background: url("images/parallax/400x200/backgroundImage20.jpg") center fixed no-repeat
