--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -10,7 +10,15 @@ block header
     include includes/header.jade
 
 block content
-    p Page Restaurant
+    div#slideMap.parallax__img
+    div.parallax__body
+        p Info Restaurant
+        
+    div.parallax__img.parallax__img--heighteen
 
 block footer
     include includes/footer.jade
+
+    script.
+        var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
+        var addressRsts = []
