--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -14,138 +14,138 @@ block content
     div.parallax__body
         div(itemscope itemtype="http://schema.org/FoodEvent")
             h3(itemprop="headline").gamma
-                | Rendez-vous le 
-                span(itemprop="startDate") 21 Octobre 
-                | à 
+                | Rendez-vous le
+                span(itemprop="startDate") 21 Octobre
+                | à
                 span(itemprop="location") Seraing
             p(itemprop="description") Pour la première fois dans l'historie de Resto-Rallye, nous organisons un évènement dans la ville de Seraing. Trois restaurants de la ville ont accepté de recevoir nos gastronomades et leurs faire découvrir les spécialités de leurs établissements.
             p(itemprop="description") Que vous soyez habitué ou encore novice à ses évènements, nous vous invitons chaleureusement à nous rejoindre ce mardi 21 Octobre pour de nouvelle découverte gastronomique.
-            p(itemprop="description") 
-                | Retrouver nous à 
+            p(itemprop="description")
+                | Retrouver nous à
                 span(itemprop="location").hightlight l'Église St Etienne
-            
-    div.parallax__img.parallax__img--six            
-    div.parallax__body  
+
+    div.parallax__img.parallax__img--six
+    div.parallax__body
         div(itemscope itemtype="http://schema.org/Thing")
             h3(itemprop="headline").gamma Inscrivez-vous pour le prochain Resto-Rallye
-            p(itemprop="description") 
-                | Désireux de nous rejoindre à notre prochain événement&nbsp;? Rien de plus simple, il suffit de remplir le formulaire ci-dessous. Dépèchez-vous&nbsp;! Il ne reste plus que 
-                span.hightlight 30 places 
+            p(itemprop="description")
+                | Désireux de nous rejoindre à notre prochain événement&nbsp;? Rien de plus simple, il suffit de remplir le formulaire ci-dessous. Dépèchez-vous&nbsp;! Il ne reste plus que
+                span.hightlight 30 places
                 | disponible.
             form.form
                 div.inline-block.form__element
-                    label(for="participant").hightlight.label__text 
+                    label(for="participantRallye").hightlight.label__text
                         | Nombre de participants
                         span.asterisque  *
-                    input(id="participant" type="text" placeholder="1").input__text
+                    input(id="participantRallye" type="text" placeholder="1").input__text
                 div.inline-block.form__element
-                    label(for="nom").hightlight.label__text
+                    label(for="nomRallye").hightlight.label__text
                         | Nom
                         span.asterisque  *
-                    input(id="nom" type="text" placeholder="Doe").input__text
+                    input(id="nomRallye" type="text" placeholder="Doe").input__text
                 div.inline-block.form__element
-                    label(for="prenom").hightlight.label__text
+                    label(for="prenomRallye").hightlight.label__text
                         | Prénom
                         span.asterisque  *
-                    input(id="prenom" type="text" placeholder="John").input__text
+                    input(id="prenomRallye" type="text" placeholder="John").input__text
                 div.inline-block.form__element
-                    label(for="address").hightlight.label__text Adresse
-                    input(id="address" type="text" placeholder="Rue de la Province, n° 10").input__text
+                    label(for="addressRallye").hightlight.label__text Adresse
+                    input(id="addressRallye" type="text" placeholder="Rue de la Province, n° 10").input__text
                 div.inline-block.form__element
-                    label(for="ville").hightlight.label__text Ville
-                    input(id="ville" type="text" placeholder="Liège").input__text
+                    label(for="villeRallye").hightlight.label__text Ville
+                    input(id="villeRallye" type="text" placeholder="Liège").input__text
                 div.inline-block.form__element
-                    label(for="postal").hightlight.label__text  Code postal
-                    input(id="postal" type="text" placeholder="4400").input__text
+                    label(for="postalRallye").hightlight.label__text  Code Postal
+                    input(id="postalRallye" type="text" placeholder="4400").input__text
                 div.inline-block.form__element
-                    label(for="tel").hightlight.label__text
+                    label(for="telRallye").hightlight.label__text
                         | Tel ou GSM
                         span.asterisque  *
-                    input(id="tel" type="text" placeholder="0498 32 72 89").input__text
+                    input(id="telRallye" type="text" placeholder="0498 32 72 89").input__text
                 div.inline-block.form__element
-                    label(for="fax").hightlight.label__text Fax
-                    input(id="fax" type="text" placeholder="063 14 85 62").input__text
+                    label(for="faxRallye").hightlight.label__text Fax
+                    input(id="faxRallye" type="text" placeholder="063 14 85 62").input__text
                 div.inline-block.form__element
-                    label(for="mail").hightlight.label__text
+                    label(for="mailRallye").hightlight.label__text
                         | Mail
                         span.asterisque  *
-                    input(id="mail" type="text" placeholder="johndoe@gmail.com").input__text
+                    input(id="mailRallye" type="text" placeholder="johndoe@gmail.com").input__text
                 div.inline-block.form__element
-                    label(for="confirmMail").hightlight.label__text
+                    label(for="confirmMailRallye").hightlight.label__text
                         | Confirmer mail
                         span.asterisque  *
-                    input(id="confirmMail" type="text" placeholder="johndoe@gmail.com").input__text
+                    input(id="confirmMailRallye" type="text" placeholder="johndoe@gmail.com").input__text
                 div.block.form__element--fullSize
-                    label(for="msg").hightlight.label__text Votre message
-                    textarea(id="msg" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
+                    label(for="msgRallye").hightlight.label__text Votre message
+                    textarea(id="msgRallye" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
                 div.block.form__element--fullSize
                     input(type="submit" value="Inscrivez-vous !").input__submit
                     label.hightlight.label__text
                         | Tous les champs munis d’un astérisque
-                        span.asterisque  (*) 
+                        span.asterisque  (*)
                         | sont obligatoires
-        
+
     div.parallax__img.parallax__img--seven
-    div.parallax__body    
+    div.parallax__body
         div(itemscope itemtype="http://schema.org/Thing")
             h3(itemprop="headline").gamma Invitez vos amis au prochain Resto-Rallye
-            p(itemprop="description") 
-                | Vous pouvez aussi décider d'offrir des places pour le prochain événement à l'un de vos amis. Vous n'avez qu'à remplir ce formulaire, nous nous occuperons de lui envoyer l'invitation. Dépèchez-vous&nbsp;! Il ne reste plus que 
-                span.hightlight 30 places 
+            p(itemprop="description")
+                | Vous pouvez aussi décider d'offrir des places pour le prochain événement à l'un de vos amis. Vous n'avez qu'à remplir ce formulaire, nous nous occuperons de lui envoyer l'invitation. Dépèchez-vous&nbsp;! Il ne reste plus que
+                span.hightlight 30 places
                 | disponible.
                 form.form
                     div.inline-block.form__element
-                        label(for="participant").hightlight.label__text 
+                        label(for="participantInvitation").hightlight.label__text
                             | Nombre de participants
                             span.asterisque  *
-                        input(id="participant" type="text" placeholder="1").input__text
+                        input(id="participantInvitation" type="text" placeholder="1").input__text
                     div.inline-block.form__element
-                        label(for="nom").hightlight.label__text
+                        label(for="nomInvitation").hightlight.label__text
                             | Nom
                             span.asterisque  *
-                        input(id="nom" type="text" placeholder="Doe").input__text
+                        input(id="nomInvitation" type="text" placeholder="Doe").input__text
                     div.inline-block.form__element
-                        label(for="prenom").hightlight.label__text
+                        label(for="prenomInvitation").hightlight.label__text
                             | Prénom
                             span.asterisque  *
-                        input(id="prenom" type="text" placeholder="John").input__text
+                        input(id="prenomInvitation" type="text" placeholder="John").input__text
                     div.inline-block.form__element
-                        label(for="address").hightlight.label__text Adresse
-                        input(id="address" type="text" placeholder="Rue de la Province, n° 10").input__text
+                        label(for="addressInvitation").hightlight.label__text Adresse
+                        input(id="addressInvitation" type="text" placeholder="Rue de la Province, n° 10").input__text
                     div.inline-block.form__element
-                        label(for="ville").hightlight.label__text Ville
-                        input(id="ville" type="text" placeholder="Liège").input__text
+                        label(for="villeInvitation").hightlight.label__text Ville
+                        input(id="villeInvitation" type="text" placeholder="Liège").input__text
                     div.inline-block.form__element
-                        label(for="postal").hightlight.label__text  Code postal
-                        input(id="postal" type="text" placeholder="4400").input__text
+                        label(for="postalInvitation").hightlight.label__text  Code Postal
+                        input(id="postalInvitation" type="text" placeholder="4400").input__text
                     div.inline-block.form__element
-                        label(for="tel").hightlight.label__text
+                        label(for="telInvitation").hightlight.label__text
                             | Tel ou GSM
                             span.asterisque  *
-                        input(id="tel" type="text" placeholder="0498 32 72 89").input__text
+                        input(id="telInvitation" type="text" placeholder="0498 32 72 89").input__text
                     div.inline-block.form__element
-                        label(for="fax").hightlight.label__text Fax
-                        input(id="fax" type="text" placeholder="063 14 85 62").input__text
+                        label(for="faxInvitation").hightlight.label__text Fax
+                        input(id="faxInvitation" type="text" placeholder="063 14 85 62").input__text
                     div.inline-block.form__element
-                        label(for="mail").hightlight.label__text
+                        label(for="mailInvitation").hightlight.label__text
                             | Mail
                             span.asterisque  *
-                        input(id="mail" type="text" placeholder="johndoe@gmail.com").input__text
+                        input(id="mailInvitation" type="text" placeholder="johndoe@gmail.com").input__text
                     div.inline-block.form__element
-                        label(for="confirmMail").hightlight.label__text
+                        label(for="confirmMailInvitation").hightlight.label__text
                             | Confirmer mail
                             span.asterisque  *
-                        input(id="confirmMail" type="text" placeholder="johndoe@gmail.com").input__text
+                        input(id="confirmMailInvitation" type="text" placeholder="johndoe@gmail.com").input__text
                     div.block.form__element--fullSize
-                        label(for="msg").hightlight.label__text Votre message
-                        textarea(id="msg" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
+                        label(for="msgInvitation").hightlight.label__text Votre message
+                        textarea(id="msgInvitation" rows="10" placeholder="Nom des participants et/ou informations complémentaire").input__text
                     div.block.form__element--fullSize
                         input(type="submit" value="Inviter vos amis !").input__submit
                         label.hightlight.label__text
                             | Tous les champs munis d’un astérisque
-                            span.asterisque  (*) 
+                            span.asterisque  (*)
                             | sont obligatoires
-        
+
     div.parallax__img.parallax__img--height
     div.parallax__body
         - var numberItem = 0
@@ -154,11 +154,11 @@ block content
             form.forms__search.forms__search--right
                 input(itemprop="object" type="text" placeholder="Recherche par Ville").input__text
                 input(itemprop="target" type="submit" value="S'inscrire").search__submit
-            while numberItem < 6           
+            while numberItem < 6
                 div(itemscope itemtype="http://schema.org/FoodEvent").inline-block.thumbnails
                     a(itemprop="url" href="evenement.html").removeLink
-                        h4(itemprop="attendee").delta 
-                            | Resto-Rallye à 
+                        h4(itemprop="attendee").delta
+                            | Resto-Rallye à
                             span(itemprop="location") Namur
                         img(itemprop="image" src="../css/images/mockUp/exempleRallye.jpg").thumbnails__img
                 - numberItem++
@@ -173,12 +173,12 @@ block content
                     a(href="#").block.pagination__element--links 3
                 span.inline-block.pagination__element
                     a(href="#").block.removeLink.pagination__element--links &rang;&rang;
-                
-    div.parallax__img.parallax__img--nine    
-    
+
+    div.parallax__img.parallax__img--nine
+
 block footer
     include includes/footer.jade
-        
+
     script.
         var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
         var addressRsts = []
